--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,9 @@
+0.2
+- support Django 3.0
+- added message to @catch()
+Backwards incompatible changes:
+- dropped Djangos earlier than 2.1
+
 0.1.1
 - fixed README display on PyPI
 
